--- a/examples/css/docs.css
+++ b/examples/css/docs.css
@@ -10,3 +10,15 @@ figure {
 	margin: 0;
 	height: 250px;
 }
+
+/* Footer
+-------------------------------------------------- */
+.footer {
+  margin-top: 45px;
+  padding: 35px 0 36px;
+  border-top: 1px solid #e5e5e5;
+}
+.footer p {
+  margin-bottom: 0;
+  color: #555;
+}
